# BookCanvas

./: .clang-tidy  .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  app.manifest
.cmake/: InstallerScript.iss.in  Version.cmake  download_booksim2.cmake  platform.cmake  version_exe.rc.in
.github/workflows/: build-ubuntu-22.04.yml  ci.yaml  macos-build.yml
make/: Darwin.mk  Generic.mk  Linux.mk  Windows.mk  common.mk
res/: res.qrc
res/icon/: app.icns
scripts/: package-windows.bat  package-windows.ps1  packages-macos.sh
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/app/: main.cpp
src/utils/: BookSimMetricLabels.h  BookSimStatsParser.cpp  BookSimStatsParser.h  BooksimPaths.cpp  BooksimPaths.h  BooksimRoutingCatalog.cpp  BooksimRoutingCatalog.h  CanvasDebugLog.cpp  CanvasDebugLog.h  NetworkTableExport.cpp  NetworkTableExport.h  SelectableLabel.h  Settings.hpp  SimpleOoxmlXlsx.cpp  SimpleOoxmlXlsx.h  SimulationRecordStore.cpp  SimulationRecordStore.h  ThemedInputDialog.cpp  ThemedInputDialog.h  Tools.cpp  Tools.h  WindowsLightDialogPolish.cpp  WindowsLightDialogPolish.h
src/view/: AboutPage.cpp  AboutPage.h  BasePage.cpp  BasePage.h  BookSimResultPage.cpp  BookSimResultPage.h  BookSimResultUi.h  CanvasPage.cpp  CanvasPage.h  GlobalConfigPage.cpp  GlobalConfigPage.h  RecordVizPage.cpp  RecordVizPage.h  SettingPage.cpp  SettingPage.h  SimulationPage.cpp  SimulationPage.h  SimulationRecordPage.cpp  SimulationRecordPage.h  UsageGuidePage.cpp  UsageGuidePage.h
src/view/component/: BooksimTopologyParams.h  BooksimTopologyPlaceDialog.cpp  BooksimTopologyPlaceDialog.h  CanvasScene.cpp  CanvasScene.h  CanvasView.cpp  CanvasView.h  ChipletSimConfigDialogs.cpp  ChipletSimConfigDialogs.h  DragButton.cpp  DragButton.h  ExportButton.cpp  ExportButton.h  GraphChiplet.cpp  GraphChiplet.h  GraphEdge.cpp  GraphEdge.h  GraphNode.cpp  GraphNode.h  GraphScene.cpp  GraphScene.h  GraphTopologyBlock.cpp  GraphTopologyBlock.h  GraphView.cpp  GraphView.h  RouterConfigDialog.cpp  RouterConfigDialog.h  RouterGlobalConfigDialog.cpp  RouterGlobalConfigDialog.h  ShowButton.cpp  ShowButton.h
tests/: test.cc
